try to fix NPE